security_groups.tf
resource "aws_security_group" "security_group_01" {
  name        = "launch-wizard-1-${var.environment}"
  description = "Permitir acesso ao load balancer jenkins"
  vpc_id      = aws_vpc.vpc-homo.id

  ingress {
    description = "SSL"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0 
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name       = "security-group01-${var.environment}"
    Owner      = "romulo"
    Managed-by = "terraform"
    Environment = "homolog"
    Datadog = "false"
  }
}

resource "aws_security_group" "security_group_02" {
  name        = "launch-wizard-2-${var.environment}"
  description = "Permitir acesso as portas customizadas instancia qa"
  vpc_id      = aws_vpc.vpc-homo.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups  = [aws_security_group.security_group_01.id]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups  = [aws_security_group.security_group_01.id]
  }
  ingress {
    description = "Custom TCP"
    from_port   = 8001
    to_port     = 8001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom TCP"
    from_port   = 3001
    to_port     = 3001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom TCP"
    from_port   = 8501
    to_port     = 8501
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom TCP"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom TCP"
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom TCP"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom TCP"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name       = "security-group02-${var.environment}"
    Owner      = "romulo"
    Managed-by = "terraform"
    Environment = "homolog"
    Datadog = "false"
  }
}

resource "aws_security_group" "seurity_group_03" {
  name        = "launch-wizard-3-${var.environment}"
  description = "Portas liberadas na instancia Jenkins"
  vpc_id      = aws_vpc.vpc-homo.id

  ingress {
    description = "SSL"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "selenium-grid"
    from_port   = 4444
    to_port     = 4444
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups  = [aws_security_group.security_group_01.id]
  }
  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups  = [aws_security_group.security_group_01.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name       = "security-group03-${var.environment}"
    Owner      = "romulo"
    Managed-by = "terraform"
    Environment = "homolog"
    Datadog = "false"
  }
}

resource "aws_security_group" "seurity_group_04" {
  name        = "launch-wizard-4-${var.environment}"
  description = "Portas liberadas na instancia Bastion-Host"
  vpc_id      = aws_vpc.vpc-homo.id

  ingress {
    description = "SSL"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name       = "security-group04-${var.environment}"
    Owner      = "romulo"
    Managed-by = "terraform"
    Environment = "homolog"
    Datadog = "false"
  }
}

resource "aws_security_group" "seurity_group_05" {
  name        = "rds-launch-wizard-${var.environment}"
  description = "Permitir acesso a porta 5432"
  vpc_id      = aws_vpc.vpc-homo.id

  ingress {
    description = "PostgreSQL"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  tags = {
    Name       = "security-group05-${var.environment}"
    Owner      = "romulo"
    Managed-by = "terraform"
    Environment = "homolog"
    Datadog = "false"
  }
}
